feat: add first-class Linux computer use
